using custom observer and obervable